# dash-react-pie-menu

./: DESCRIPTION  MANIFEST.in  NAMESPACE  Project.toml  README.md  _validate_init.py  index.html  package-lock.json  pyproject.toml  usage.py  webpack.config.js
R/: dashReactPieMenu.R  dashSlice.R  internal.R
dash_react_pie_menu/: DashReactPieMenu.py  DashSlice.py  __init__.py  _imports_.py  dash_react_pie_menu.min.js  metadata.json  package-info.json
man/: dashReactPieMenu.Rd  dashSlice.Rd
src/: dashreactpiemenu.jl  dashslice.jl
src/demo/: App.js
src/jl/: dashreactpiemenu.jl  dashslice.jl
src/lib/: index.js
src/lib/components/: DashReactPieMenu.react.js  DashSlice.react.js
