[tool.poetry]
name = "dash_react_pie_menu"
version = "0.1.0"
description = "Dash react pie menu"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]
sd-material-ui = "^4.5.1"
dash-bootstrap-components = "^1.0.0"
dash = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
